--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.16.3",
+    "date-fns": "^2.22.1",
+    "firebase": "^8.6.8",
+    "lodash": "^4.17.21",
+    "styled-components": "^5.3.0",
+    "react-router-dom": "^5.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
