--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.16.3",
     "date-fns": "^2.22.1",
     "firebase": "^8.6.8",
+    "firebase-admin": "^11.9.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
